# Tty_sender

./: Cargo.toml  readme.md
src/: consts.rs  controls.rs  file_io.rs  input.rs  main.rs  utils.rs  window_data.rs
